<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tundora"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="oneBTNPush"
            android:text="@string/one_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="twoBTNPush"
            android:text="@string/two_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="threeBTNPush"
            android:text="@string/three_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="operatorProdBTNPush"
            android:text="@string/prod_operator"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"

            android:onClick="fourBTNPush"
            android:text="@string/four_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="fiveBTNPush"
            android:text="@string/five_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="nineBTNPush"
            android:text="@string/nine_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="operatorMinusBTNPush"
            android:text="@string/minus_operator"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"

            android:onClick="sevenBTNPush"
            android:text="@string/seven_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="equalBTNPush"
            android:text="@string/equals_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="eightBTNPush"
            android:text="@string/eight_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="sixBTNPush"
            android:text="@string/six_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="operatorSumBTNPush"
            android:text="@string/sum_operator"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button18"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"

            android:onClick="zeroBTNPush"
            android:text="@string/zero_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/button15"
            app:layout_constraintStart_toStartOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button19"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="ComaBTNPush"
            android:text="@string/coma_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="closeParenthesisBTNPush"
            android:text="@string/parenthesis_close_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="operatorDivBTNPush"
            android:text="@string/divide_operator"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_button_background"
            android:onClick="openParenthesisBTNPush"
            android:text="@string/parenthesis_open_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/red_button_background"
            android:onClick="ClearBTNPush"
            android:text="@string/clear_text"
            android:textColor="@color/pumice"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/red_button_background"
            android:onClick="backspaceBTNPush"
            android:text="Button"
            android:textColor="@color/pumice"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button40"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/conversor_text"
            android:background="@drawable/grey_button_background"
            android:textSize="20sp"
            android:textColor="@color/pumice"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_2"
        android:layout_width="413dp"
        android:layout_height="212dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/previous_calc"
            android:layout_width="296dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/pumice"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/display_expre"
            android:layout_width="415dp"
            android:layout_height="124dp"
            android:ems="10"
            android:hint="@string/display_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColor="@color/pumice"
            android:textColorHint="@color/pumice"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>